<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="top"
              android:orientation="vertical"
              android:paddingBottom="5dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_company_id"/>

        <TextView
            android:id="@+id/companyId"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_advertisement"/>

        <TextView
            android:id="@+id/advertisement"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_uuid"/>

        <TextView
            android:id="@+id/uuid"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_major"/>

        <TextView
            android:id="@+id/major"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_minor"/>

        <TextView
            android:id="@+id/minor"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tx_power"/>

        <TextView
            android:id="@+id/txpower"
            style="@style/GridLayoutDataTextView"/>
    </GridLayout>

</LinearLayout>