<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <GridLayout
        android:id="@+id/scan_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:text="@string/label_bluetooth_le_status"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scan_ble_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="28dp"
            android:layout_row="0"
            android:gravity="right"
            android:text="@string/not_supported"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/label_bluetooth_status"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scan_ble_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="28dp"
            android:layout_row="1"
            android:gravity="right"
            android:text="@string/off"
            android:textSize="12sp"/>
    </GridLayout>

    <View
        android:id="@+id/upperSepparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/scan_info_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:id="@+id/lowerSepparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/scan_device_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formatter_item_count"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scan_list_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/scan_info_linear"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"/>

            <TextView
                android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_data"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
